discussion/kv_engine/154545/154545_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38476: Update spdlog to v1.8.5 (KV)

Update spdlog to v1.8.5. This patch contains two things:

1) Fixes for the API updates between v1.1.0 and v1.8.5.
2) Changes to deal with the spdlog registry holding shared_ptrs
   (changes had been made to the old version to have the spdlog
   registry hold weak_ptrs). These include removing the dtor of
   BucketLogger to avoid recursive locking of the mutex in the
   spdlog registry and removal of the manual globalBucketLogger
   resets.

Change-Id: I81db06c75f63e8c0f56f410fc24c716549bbabc6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-28 09:49:07.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-28 09:52:14.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30910/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30910/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9899/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9899/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10973/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10829/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11237/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11237/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18804/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9274/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9274/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9274/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7855/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
